--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: AwesomeJT
-logo: /assets/images/logo.avif
-baseurl: /awesome-jekyll-theme
+title: Yan Lei
+# logo: /assets/images/logo.avif
+baseurl: 
 
 ##
 # Collections configuration
@@ -18,8 +18,8 @@ collections:
 ##
 contact_channels_section: true
 contact_channels:
-  # email: "example@example.cl"
-  github: "https://github.com/a-chacon"
+  email: "yan.lei@u.nus.edu"
+  # github: "https://github.com/a-chacon"
   # telegram: "https://t.me/"
   # stackoverflow: "https://stackoverflow.com"
   # discord: "https://discord.com/"
